--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
   <main> 
     <section class="container"> 
         <article class="cartao"> 
             <div class="cartao_conteudo"> 
-                <h3>Programaçãõ</h3>
+                <h3>Programação</h3>
                 <div class="pergunta"> 
                     o que é JavaScript?
                 </div>
