alterações  nos cartões.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,32 @@
                 </div>
             </div>
         </article>
+
+    <article class="cartao"> 
+            <div class="cartao_conteudo"> 
+                <h3>Programação</h3>
+                <div class="pergunta"> 
+                    O que é um array?
+                </div>
+                <div class="resposta"> 
+                    Um array é uma coleção ordenada de elementos do mesmo tipo.
+
+                </div>
+            </div>
+        </article>
+
+            <article class="cartao"> 
+            <div class="cartao_conteudo"> 
+                <h3>Programação</h3>
+                <div class="pergunta"> 
+                O que é um algoritmo?
+                </div>
+                <div class="resposta"> 
+                    Um algoritmo é uma sequência de passos para resolver um problema.
+
+                </div>
+            </div>
+        </article>
     </section>
   </main> 
   <footer>
