--- a/index.html
+++ b/index.html
@@ -46,6 +46,32 @@
                 </div>
             </div>
         </article>
+
+   <article class="cartao"> 
+            <div class="cartao_conteudo"> 
+                <h3>Programação</h3>
+                <div class="pergunta"> 
+                    o que é JavaScript?
+                </div>
+                <div class="resposta"> 
+                    É uma linguagem de Programação
+                </div>
+            </div>
+        </article>
+
+   <article class="cartao"> 
+            <div class="cartao_conteudo"> 
+                <h3>Programação</h3>
+                <div class="pergunta"> 
+                    o que é JavaScript?
+                </div>
+                <div class="resposta"> 
+                    É uma linguagem de Programação
+                </div>
+            </div>
+        </article>
+
+
     </section>
   </main> 
   <footer>
