fizemos cartoes javascript

--- a/index.html
+++ b/index.html
@@ -77,5 +77,11 @@
   <footer>
     <p> projeto desenvolvido por antonia</p>
   </footer> 
+
+
+<script src="app.js"></script>
+<script src="perguntas.js"></script>
+
+
 </body>
 </html>
