--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main> 
-    <section class="container"> 
+    <section id="container"> 
         <article class="cartao"> 
             <div class="cartao_conteudo"> 
                 <h3>Programação</h3>
